css issue in dark mode fixed, python practices modified

--- a/milestone-properties/css/darkmode.css
+++ b/milestone-properties/css/darkmode.css
@@ -13,7 +13,7 @@
 }
 
 .dark-mode .group-child {
-	background-color: #3a3a3a;
+	background-color: #3a3a3a !important;
 }
 
 .dark-mode a.list-group-item:focus,
